...
                                <rect key="frame" x="16" y="314" width="343" height="21"/>
                                <accessibility key="accessibilityConfiguration" hint="label" identifier="label"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" restorationIdentifier="square" translatesAutoresizingMaskIntoConstraints="NO" id="vUF-y6-oN7" userLabel="square">
                                <rect key="frame" x="137" y="139" width="100" height="100"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="
                                        <rect key="frame" x="0.0" y="0.5" width="100" height="100"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
